fix Language Selector alignment for Discussion forum on IsraelX

--- a/edx-platform/israelxedu.gov.il/lms/static/sass/_overrides.scss
+++ b/edx-platform/israelxedu.gov.il/lms/static/sass/_overrides.scss
@@ -350,6 +350,7 @@ header.header-main {
       .language-selection {
         display: inline-block;
         position: relative;
+        line-height: 25px;
       }
 
       .language-selection select {
